--- a/px-context-browser-behaviors.html
+++ b/px-context-browser-behaviors.html
@@ -18,7 +18,7 @@
     conditionalClass: function(condition, className, base) {
       base = (typeof base === 'undefined') ? '' : base;
       if(typeof condition === 'undefined' || typeof className === 'undefined') {
-        return '';
+        return base;
       }
       return condition ? className + ' ' + base : base;
     },
