adding 'context' as a shared property across all elements

--- a/px-context-browser-behaviors.html
+++ b/px-context-browser-behaviors.html
@@ -1,7 +1,11 @@
 <script>
   PxContextBrowserBehaviors = {
-
+    
     properties: {
+      context : {
+        value: function() {return {};},
+        type: Object
+      },
       fieldKeys: {
         type: Object,
         value: function() {
