--- a/px-context-browser-column-browser.html
+++ b/px-context-browser-column-browser.html
@@ -35,7 +35,7 @@
     },
 
     observers: [
-      '_contextChanged(context.localUpdatedAt)'
+      '_contextChanged(context, context.localUpdatedAt)'
     ],
 
     _setColumns: function(children) {
