--- a/px-context-browser-behaviors.html
+++ b/px-context-browser-behaviors.html
@@ -1,16 +1,12 @@
 <script>
   PxContextBrowserBehaviors = {
-    
+
     properties: {
-      context : {
-        value: function() {return {};},
-        type: Object
-      },
       fieldKeys: {
         type: Object,
         value: function() {
           return {
-            children: "data",
+            children: "children",
             id: "id",
             label: "name"
           }
